--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 header{
   background-color: black;
-  padding:0% 1%;
+  padding-top: .5%;
   text-align: center !important;
 }
 
@@ -22,10 +22,12 @@ header{
 }
 
 span{
-  margin:0%;
+  /* margin:0% !important; */
   font-size:100px;
   color: white;
   font-family: 'Bebas Neue';
+  /* height: 100px; */
+  display: inline-block;
 }
 
 .grid-container {
@@ -45,3 +47,12 @@ span{
   }
 
   
+.icon{
+  width: 3%;
+  height: auto;
+}
+
+.contacts{
+  padding: 0% !important;
+  margin: 0% !important;
+}
